# mvre_hub

./: Cargo.toml  README.md
.github/: release-notes.md
.github/workflows/: release.yml  version-check.yml
scripts/: release.sh
src/: cli.rs  config.rs  deploy.rs  lib.rs  main.rs  services.rs  systemd.rs  templates.rs  util.rs
tests/: config_tests.rs
