[package]
name = "mvre-hub"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dialoguer = "0.10"  # Remove the theme feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
nix = "0.26"
clap = { version = "4.0", features = ["derive"] }
whoami = "1.4"
